2004-01-21  Andrew Burton <adburton@users.sourceforge.net>

	* configure.in: Fix missing Makefile clauses for omf-install
	and help subdirectories.

2004-01-17  Marcus Meissner <marcus@jet.franken.de>
	
	* src/gtkam-save.c: Fixed small memleak.
	
2004-01-14  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-tree.c: When loading cameras, destroy status widget
	when finished to prevent duplicate status lines appearing.
	* src/gtkam-list.c: When saving and deleting files from the
	context menu, allow for more than one file to be processed (fixes
	Debian bug #205460); destroy status widget when finished loading
	thumbnail (fixes Debian bug #198335); modify check for thumbnail
	loading so thumbnails for all possible files are shown, not just
	pictures (fixes Debian bug #198335, SF feature request #358874).

2004-01-14  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-tree.c: Set window title to Select Camera 
	when right-clicking on camera name

2004-01-14  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-viewer.c: Modify built-in viewer to open image at
	  640x480 with no camera icon, set window title to be the filename.

2004-01-13  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-chooser.c: Change window title to Add Camera for
	consistency with menu items.

	Added gtkam-specific Help

	* configure.in: Remove check for gphoto-manual
	* src/Makefile.am: Modify APP_DATADIR location

2004-01-10  Andrew Burton <adburton@users.sourceforge.net>

	Modify Save and Delete menu option sensitivity handling:

	* src/gtkam-main.c

	Added gtkam-specific Help and .desktop entry for Gnome menu

	* src/main.c: Add APP_DATADIR clause to gnome_program_init
	* Makefile.am: Add help omf-install to SUBDIRS
	  Add gtkamdoc_DATA, desktop_DATA and icon_DATA handling

2004-01-10  Lutz Mueller <lutz@users.sourceforge.net>

	* src/gtkam-save.c: Fix my latest commit.

2004-01-08  Lutz Mueller <lutz@users.sourceforge.net>
